Bug 844511 - Only luminance masks need unpremultiplying and conversion to linear RGB. r=longsonr